fixed small spacing issues in multiple components

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,8 +1,8 @@
 .container.contact__container {
     width: 58%;
     display: grid;
-    grid-template-columns: 30% 58%;
-    gap: 12%;
+    grid-template-columns: 39% 53%;
+    gap: 8%;
     margin-bottom: 55px;
 }
 
