--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
     --color-primary: #4db5ff;
     --color-primary-variant: rgba(77, 181, 255, 0.4);
     --color-white: #fff;
+    --color-black: #000;
     --color-light: rgba(255,255,255,0.6);
 
     --container-width-lg: 75%;
